[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/uiComponents/Backdrop.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/chat/Chat.gd" type="Script" id=2]
[ext_resource path="res://assets/theme/theme.tres" type="Theme" id=3]
[ext_resource path="res://ui/uiComponents/CustomLineEdit.tscn" type="PackedScene" id=4]

[node name="ChatContainer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 3 )
script = ExtResource( 2 )

[node name="Backdrop" parent="." instance=ExtResource( 1 )]
mouse_filter = 0

[node name="SpamLimitTimer" type="Timer" parent="."]
autostart = true

[node name="Control" type="Control" parent="."]
anchor_right = 0.5
anchor_bottom = 1.0
margin_bottom = -115.0
rect_min_size = Vector2( 400, 0 )
mouse_filter = 2

[node name="InGameMessages" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -32.0
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( -0.507233, 189.126 )
rect_clip_content = true
mouse_filter = 2
custom_constants/separation = 0
alignment = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Control"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -32.0
grow_vertical = 0
mouse_filter = 1
size_flags_horizontal = 0
scroll_horizontal_enabled = false

[node name="ChatContainer" type="VBoxContainer" parent="Control/ScrollContainer"]
margin_right = 512.0
margin_bottom = 453.0
rect_min_size = Vector2( 0, 453 )
rect_clip_content = true
size_flags_horizontal = 3
custom_constants/separation = 0
alignment = 2

[node name="LineEdit" parent="Control" instance=ExtResource( 4 )]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = -30.0
margin_right = 0.0
margin_bottom = 0.0
placeholder_text = "Chat message"

[node name="SendChatMsg" type="Button" parent="Control/LineEdit"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -15.5
margin_bottom = 23.5
rect_scale = Vector2( 0.8, 0.8 )
text = "SEND"

[connection signal="pressed" from="Control/LineEdit/SendChatMsg" to="." method="_on_SendChatMsg_pressed"]
